--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,43 +1,66 @@
 <div style="background-color: none; display:flex;" class="row">
+  <h3>Login handlebars</h3>
   <div class="col-md-6 ml-1 login">
-    <h2 style="padding-left: 28px; padding-bottom: 10px">Login</h2>
+    <h2 style="padding-left: 28px; padding-bottom: 10px;">Login</h2>
 
     <form class="form login-form">
-      <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
-        <label for="email-login">Email:</label>
-        <input type="text" style="border: 2px solid black" class="form-input" id="email-login">
+      <div style="padding-left: 28px; padding-bottom: 10px;">
+        <input
+          type="text"
+          style="border: 2px solid black;"
+          class="form-input"
+          id="email-login"
+        />
       </div>
-      <div class="form-group">
+      <div>
         <label for="password-login">Password:</label>
-        <input type="password" style="border: 2px solid black" class="form-input" id="password-login">
+        <input
+          type="password"
+          style="border: 2px solid black;"
+          class="form-input"
+          id="password-login"
+        />
       </div>
-      <div style="padding-left: 28px; padding-top: 10px" class="form-group">
-        <button type="submit" style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary">login</button>
+      <div style="padding-left: 28px; padding-top: 10px;">
+        <button
+          type="submit"
+          style="background-color: var(--main-bg-color); border: 2px solid black;"
+          class="btn btn-primary"
+        >login</button>
       </div>
     </form>
   </div>
-  <div style="box-shadow: 0 0 10px black; background-color: white;" class="col-md-6 ml-1">
-    <h2 style="padding-left: 28px; padding-bottom: 10px">Signup</h2>
+  <div
+    style="box-shadow: 0 0 10px black; background-color: white;"
+    class="col-md-6 ml-1"
+  >
+    <h2 style="padding-left: 28px; padding-bottom: 10px;">Signup</h2>
 
     <form class="form signup-form" id="signupform">
-      <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
+      <div style="padding-left: 28px; padding-bottom: 10px;" >
         <label for="name-signup">Full Name:</label>
-        <input type="text" class="form-input" id="name-signup">
+        <input type="text" class="form-input" id="name-signup" />
       </div>
-      <div style="padding-left: 28px; padding-bottom: 10px" class="form-group">
+      <div style="padding-left: 28px; padding-bottom: 10px;" >
         <label for="username-signup">Username:</label>
-        <input type="text" class="form-input" id="username-signup">
+        <input type="text" class="form-input" id="username-signup" />
       </div>
-      <div style="padding-left: 61px; padding-bottom: 10px" class="form-group">
+      <div style="padding-left: 61px; padding-bottom: 10px;" >
         <label for="email-signup">Email:</label>
-        <input type="text" class="form-input"  id="email-signup">
+        <input type="text" class="form-input" id="email-signup" />
       </div>
-      <div style="padding-left: 33px; padding-bottom: 10px" class="form-group">
+      <div style="padding-left: 33px; padding-bottom: 10px;" >
         <label for="password-signup">Password:</label>
-        <input type="password" class="form-input" id="password-signup">
+        <input type="password" class="form-input" id="password-signup"/>
       </div>
-      <div style="padding-left: 28px; padding-top: 10px; padding-bottom: 10px" class="form-group">
-        <button type="submit" style="background-color: rgb(196, 170, 216); border: 2px solid black" class="btn btn-primary">signup</button>
+      <div
+        style="padding-left: 28px; padding-top: 10px; padding-bottom: 10px;"
+      >
+        <button
+          type="submit"
+          style="background-color: var(--main-bg-color); border: 2px solid black;"
+          class="btn btn-primary"
+        >signup</button>
       </div>
     </form>
   </div>
