--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,21 +1,35 @@
 <div style="display: flex; justify-content: center; margin-top: 1%;">
+  <h3>"Search handlebars"</h3>
   <div
-    style="border: black solid 1px; width: 50%; padding: 1%; box-shadow: 0 0 10px black; background-color: white; margin-top: 10px">
-    <div class="row mt-4" style="display: flex; justify-content: center;">
+    style="border: black solid 1px; width: 50%; padding: 1%; box-shadow: 0 0 10px black; background-color: white; margin-top: 10px;"
+  >
+    <div class="row mt-4" style="display: d-flex; justify-content: center;">
       <div class="col-md-6">
         <form id="searchForm">
           <h3 style="font-size: 40px;">Search for users</h3>
-          <input style="border: 2px solid black; padding-left: 0%; margin-top:5%;" class="form-input" type="text" id="searchBar"
-            name="search bar"/>
-          <button type="submit" id="searchButton" class="submitButton btn btn-primary">Search</button>
-     </form>
+          <input
+            style="border: 2px solid black; padding-left: 0%; margin-top:5%;"
+            class="form-input"
+            type="text"
+            id="searchBar"
+            name="search bar"
+          />
+          <button
+            type="submit"
+            id="searchButton"
+            class="submitButton btn btn-primary"
+          >Search</button>
+        </form>
       </div>
     </div>
   </div>
 </div>
 
-<ul style="list-style-type:none; display:none; justify-content: space-around;" id="searchResults">
+<ul
+  style="list-style-type:none; display:none; justify-content: space-around;"
+  id="searchResults"
+>
 
 </ul>
 
-<script src='/js/searchusers.js'> </script>
+<script src="/js/searchusers.js"> </script>
